# ragtoy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  turing.txt
answer_app/: vector.py  vector_test.py
answer_app/flaskapp/: app.py  config.py  llm.py  models.py  nlp.py  resources.py  vector.py  vector_test.py
data/: greatwork.txt
example/: app.py
examples/: Alan_Turing.txt  Alan_Turing_embedding.csv  README.md  test_split_chunks.py  wiki_qa.py
src/: app.py
src/chattoy/client/: client.py  models.py
src/chattoy/cmd/: client.py  client_cmd.py  main.py  server_cmd.py
src/chattoy/flaskapp/: app.py  config.py  models.py  nlp.py  resources.py  route.py  vector.py
src/chattoy/ragapp/: app.py  config.py  models.py  vector_test.py
src/client/: client.py  models.py
src/cmd/: server.py
src/command/: main.py
src/flaskapp/: app.py  config.py  llm.py  models.py  nlp.py  nlp_test.py  resources.py  route.py  vector.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.vue
src/frontend/src/components/: ChatComponent.vue  ControlPanel.vue  DocumentAdd.vue  DocumentList.vue  DocumentManage.vue  MainPage.vue
src/models/: base.py  documents.py
src/ragtoy/: app.py  config.py  database.py  database_test.py  models.py
src/ui/: app.py  chat.py  document.py  setting.py
