[tool.poetry]
name = "ragtoy"
version = "0.0.1"
description = "An example RAG command line toy implementation"
authors = ["Kevin Hu <hxy9243@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "command", from = "src" },
    { include = "ragtoy", from = "src" },
]

[tool.poetry.scripts]
ragtoy = "command.main:main"

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.3.0"
python-dotenv = "^1.0.0"
click = "^8.1.7"
llama-index-core = "^0.11.12"
llama-index-llms-openai = "^0.2.0"
llama-index-vector-stores-chroma = "^0.2.0"
llama-index-embeddings-openai = "^0.2.3"
llama-index-readers-file = "^0.2.0"
llama-index = "^0.11.2"
chromadb = "^0.5.5"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.34"

[tool.poetry.extras]
validation = ["apispec"]
embeddings = ["openai"]

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

